Agregando los primeros pasos con los test en el modelo MVC

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
             "MVC\\": "./",
             "Controller\\": "./controllers/",
             "Model\\": "./models/",
-            "Class\\": "./classes/"
+            "Clase\\": "./classes/"
         }
     },
     "authors": [
